--- a/06032017/exo1/about.html
+++ b/06032017/exo1/about.html
@@ -4,9 +4,9 @@
         <meta charset="utf-8">
         <title>A propos</title>
     </head>
-    <bod>
+    <body>
         <h1>A propos de moi</h1>
         <a href="index.html">Retour page principale</a>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi nesciunt corporis perferendis reprehenderit necessitatibus iure porro! Blanditiis omnis sed, perspiciatis at voluptates voluptatem illo, veniam praesentium autem beatae commodi vero?</p>
-    </bod>
+    </body>
 </html>
