--- a/06032017/exo1/index.html
+++ b/06032017/exo1/index.html
@@ -19,18 +19,30 @@
         <p>Lorem ipsum dolor sit amet, <b>consectetur adipisicing elit</b>. Iusto animi, totam sapiente repudiandae modi nam odit et repellendus <i>necessitatibus</i> illum cupiditate, voluptatibus rerum labore provident molestiae saepe quis eius est!</p>
 
         <!--Liste ordonnée-->
-        <ol>
+        <ol style="background-color:blue;color: white;">
             <li>Pierre</li>
             <li><i>Paul</i></li>
             <li>Jacques</li>
         </ol>
 
         <!--Liste non ordonnée-->
-        <ul>
+        <ul style="background-color: red;list-style-type: none;">
             <li>John</li>
             <li><b>Paul</b></li>
             <li>George</li>
         </ul>
+
+        <form action="about.html" method="post" style="text-align: center;background-image: url(http://sniteartmuseum.nd.edu/assets/166204/original/ferrari.jpg);" >
+            <fieldset>
+                <legend>Mike</legend>
+                <p>Nom</p>
+                <input type="text" name="nom">
+                <p>Prénom</p>
+                <input type="text" name="prenom">
+                <br>
+                <input type="submit">
+            </fieldset>
+        </form>
 
         <!--Image-->
         <img src="img\mignon.jpg" alt="Photo d'un mignon'">
