--- a/06032017/exo1/index.html
+++ b/06032017/exo1/index.html
@@ -26,13 +26,13 @@
         </ol>
 
         <!--Liste non ordonnée-->
-        <ul style="background-color: red;list-style-type: none;">
+        <ul style="background-color: red;list-style-type: none">
             <li>John</li>
             <li><b>Paul</b></li>
             <li>George</li>
         </ul>
 
-        <form action="about.html" method="post" style="text-align: center;background-image: url(http://sniteartmuseum.nd.edu/assets/166204/original/ferrari.jpg);" >
+        <form action="about.html" method="get" style="text-align: center;background-image: url(http://sniteartmuseum.nd.edu/assets/166204/original/ferrari.jpg);background-size: cover;" >
             <fieldset>
                 <legend>Mike</legend>
                 <p>Nom</p>
