--- a/06032017/exo1/index.html
+++ b/06032017/exo1/index.html
@@ -32,7 +32,7 @@
             <li>George</li>
         </ul>
 
-        <form action="about.html" method="get" style="text-align: center;background-image: url(http://sniteartmuseum.nd.edu/assets/166204/original/ferrari.jpg);background-size: cover;" >
+        <form action="about.html" method="get" style="text-align: center;background-image: url(http://sniteartmuseum.nd.edu/assets/166204/original/ferrari.jpg);background-size: 100% 100%;" >
             <fieldset>
                 <legend>Mike</legend>
                 <p>Nom</p>
