--- a/08032017/exo2/index.html
+++ b/08032017/exo2/index.html
@@ -2,13 +2,10 @@
 <html>  
     <head>
         <meta charset="utf-8">
-        <title>Exo1 08032017</title>
+        <title>Exo2 08032017</title>
         <!--Ajouter le style dans la balise head-->
-        <style>
-            h2 {
-                color: lawngreen;
-            }
-        </style>
+        <link rel="stylesheet" href="css/style.css">
+
     </head>
     <body>
         <!--Entéte de page-->
@@ -19,11 +16,11 @@
             <nav>
                 <ul>
                     <!--Ajout de CCS en ligne-->
-                    <li><a href="#" style="color:red;">Accueil</a></li>
-                    <li><a href="#" style="color:red;">A propos</a></li>
-                    <li><a href="#" style="color:red;">Portfolio</a></li>
-                    <li><a href="#" style="color:red;">Contact</a></li>
-                    <li><a href="#" style="color:red;">profil github</a></li>
+                    <li><a href="#">Accueil</a></li>
+                    <li><a href="#">A propos</a></li>
+                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">profil github</a></li>
                 </ul>
             </nav>
         </header>
