--- a/08032017/exo2/index.html
+++ b/08032017/exo2/index.html
@@ -26,8 +26,8 @@
         </header>
         <!--Corps de la page-->
         <main>
-            <section>
-                <h2>A propos de moi</h2>
+            <section class="redBackground">
+                <h2  id="bigTitle">A propos de <b>Robert KOWALCZYK</b></h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio porro nemo adipisci illum reprehenderit totam, culpa doloribus incidunt magni ipsa alias quidem quae odio quia qui ab earum dignissimos! Blanditiis?</p>
             </section>
             <!--Créer un zone-->
@@ -51,13 +51,13 @@
                 </article>                                
             </section>
             <section>
-                <h2>Contacter Robert KOWALCZYK</h2>
+                <h2>Contacter <b>Robert KOWALCZYK</b></h2>
                 <p>Vous pouvez envoyer un email en cliquant sur cette adresse : <a href="#">robert.kowalczyk@sfr.fr</a></p>
             </section>
 
         </main>
         <!--Pied de page-->
-        <footer>
+        <footer class="redBackground">
             <p>Under MIT Licence</p>
         </footer>
     </body>
