CSS typo et couleur

--- a/08032017/exo3/index.html
+++ b/08032017/exo3/index.html
@@ -26,12 +26,12 @@
         </header>
         <!--Corps de la page-->
         <main>
-            <section class="redBackground">
-                <h2  id="bigTitle">A propos de <b>Robert KOWALCZYK</b></h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio porro nemo adipisci illum reprehenderit totam, culpa doloribus incidunt magni ipsa alias quidem quae odio quia qui ab earum dignissimos! Blanditiis?</p>
+            <section>
+                <h2>A propos de <b>Robert KOWALCZYK</b></h2>
+                <p class="presentation">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio porro nemo adipisci illum reprehenderit totam, culpa doloribus incidunt magni ipsa alias quidem quae odio quia qui ab earum dignissimos! Blanditiis?</p>
             </section>
             <!--Créer un zone-->
-            <section>
+            <section id="portfolio">
                 <h2>Mon Porfolio</h2>
                 <p>Cliquez sur un des projets ci-dessous</p>
                 <!--Créer 3 sous-sections-->
@@ -57,7 +57,7 @@
 
         </main>
         <!--Pied de page-->
-        <footer class="redBackground">
+        <footer>
             <p>Under MIT Licence</p>
         </footer>
     </body>
