Mise en place CSS

--- a/09032017/index.html
+++ b/09032017/index.html
@@ -21,7 +21,7 @@
             <p>web developer - graphic artist - user experience designer</p>            
         </header>
         <main>
-            <section>
+            <section id="portfolio">
                 <h2>porfolio</h2>
                 <article>
                     <a href="#">loupe</a>
@@ -48,13 +48,20 @@
                     <img src="img/submarine.png" alt="submarine">
                 </article>
             </section>
-            <section>
+            <section id="about">
                 <h2>about</h2>
                 <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization. Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
                 <a href="#">download theme</a>
             </section>
-            <section>
+            <section id="contacts">
                 <h2>contact me</h2>
+                <form action="#">
+                    <input type="text" placeholder="Name">
+                    <input type="email" placeholder="Email Adress">
+                    <input type="tel" placeholder="Phone Number">
+                    <textarea placeholder="Message"></textarea>
+                    <input type="submit" value="Send">
+                </form>
             </section>
         </main>
         <footer>
@@ -69,18 +76,8 @@
                 </article>
                 <article>
                     <h3>about freelancer</h3>
-                    <p>freelance is a free to use, open source Bootstrap theme created by<a href="#" target="_blank">Start Bootstrap</a>.</p>
+                    <p>freelance is a free to use, open source Bootstrap theme created by <a href="https://google.fr" target="_blank">Start Bootstrap</a>.</p>
                 </article>
-            </section>
-            <section>
-                <h2>contact me</h2>
-                <form action="#">
-                    <input type="text" placeholder="Name">
-                    <input type="email" placeholder="Email Adress">
-                    <input type="tel" placeholder="Phone Number">
-                    <textarea placeholder="Message"></textarea>
-                    <input type="submit" value="Send">
-                </form>
             </section>
             <aside>under MIT licence</aside>            
         </footer>
