--- a/09032017/index.html
+++ b/09032017/index.html
@@ -3,6 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <!-- Ajouter les CSS externes en premier -->
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+        <!-- Feuille de style du site en dernier -->
         <link rel="stylesheet" href="CSS/style.css">
         <title>9 Mars - Premier site</title>
     </head>
@@ -51,7 +54,7 @@
             <section id="about">
                 <h2>about</h2>
                 <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization. Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
-                <a href="#">download theme</a>
+                <a href="#"><i class="fa fa-download" aria-hidden="true"></i> download theme</a>
             </section>
             <section id="contacts">
                 <h2>contact me</h2>
