--- a/10032017/exo4/index.html
+++ b/10032017/exo4/index.html
@@ -3,9 +3,6 @@
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <!-- Ajouter les CSS externes en premier -->
-        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-        <!-- Feuille de style du site en dernier -->
         <link rel="stylesheet" href="CSS/style.css">
         <title>9 Mars - Premier site</title>
     </head>
@@ -24,39 +21,39 @@
             <p>web developer - graphic artist - user experience designer</p>            
         </header>
         <main>
-            <section id="portfolio">
+            <section>
                 <h2>porfolio</h2>
                 <article>
-                    <a href="#">loupe</a>
+                    <a href="#"><i class="fa fa-search-plus" aria-hidden="true"></i></a>
                     <img src="img/cabin.png" alt="cabin">
                 </article>
                 <article>
-                    <a href="#">loupe</a>
+                    <a href="#"><i class="fa fa-search-plus" aria-hidden="true"></i></a>
                     <img src="img/cake.png" alt="cake">
                 </article>
                 <article>
-                    <a href="#">loupe</a>
+                    <a href="#"><i class="fa fa-search-plus" aria-hidden="true"></i></a>
                     <img src="img/circus.png" alt="circus">
                 </article>
                 <article>
-                    <a href="#">loupe</a>
+                    <a href="#"><i class="fa fa-search-plus" aria-hidden="true"></i></a>
                     <img src="img/game.png" alt="game">
                 </article>
                 <article>
-                    <a href="#">loupe</a>
+                    <a href="#"><i class="fa fa-search-plus" aria-hidden="true"></i></a>
                     <img src="img/safe.png" alt="safe">
                 </article>
                 <article>
-                    <a href="#">loupe</a>
+                    <a href="#"><i class="fa fa-search-plus" aria-hidden="true"></i></a>
                     <img src="img/submarine.png" alt="submarine">
                 </article>
             </section>
-            <section id="about">
+            <section>
                 <h2>about</h2>
                 <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization. Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
                 <a href="#"><i class="fa fa-download" aria-hidden="true"></i> download theme</a>
             </section>
-            <section id="contacts">
+            <section>
                 <h2>contact me</h2>
                 <form action="#">
                     <input type="text" placeholder="Name">
