--- a/21032017/contacts.html
+++ b/21032017/contacts.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
-    <title>Brand New App</title>
+    <title>Contacts - Brand New App</title>
 </head>
 <body>
     <header>
@@ -24,8 +24,16 @@
     </header>
 
     <main>
-        <h2>Accueil</h2>
+        <h2>Contacts</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos itaque eius ipsum perspiciatis, eveniet est modi nesciunt laboriosam commodi, molestias culpa in excepturi distinctio nam sequi suscipit consequatur voluptate laudantium.</p>
+        <form action="#">
+            <input type="text" placeholder="Nom complet">
+            <input type="email" placeholder="E-mail">
+            <input type="text" placeholder="Sujet">
+            <textarea placeholder="Message"></textarea>
+            <input type="submit" value="Envoyer le message">
+        </form>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2583.19583273015!2d3.2792949160866907!3d49.65060927937305!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e83ffbe858752d%3A0x4181dff6f8955dfd!2s211+Boulevard+Gambetta%2C+02700+Condren!5e0!3m2!1sfr!2sfr!4v1490107734570" allowfullscreen></iframe>
     </main>
     <footer>
         <!-- Line RS et copyright-->
