--- a/22032017/Eval blanche/index.html
+++ b/22032017/Eval blanche/index.html
@@ -26,64 +26,48 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates dolorum doloremque quasi et maiores minima expedita rem, possimus perferendis, placeat reprehenderit, labore aspernatur deserunt alias quae incidunt laborum ipsa modi.</p>
         </section>
         <section>
-            <h2>Sed ut perspiciatis unde</h2>
+            <h2><span>Sed ut perspiciatis unde</span></h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, fugiat ipsum consectetur sapiente eum! Aliquam, suscipit in ipsam ut perferendis eum alias sint deserunt impedit cum dolore rerum nemo, ipsa!</p>
             <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus omnis, praesentium cumque eaque. Adipisci, id nobis qui alias possimus eius quae eum minima accusantium blanditiis. Illo porro unde, veritatis ullam.</p>
         </section>
         <section>
-            <h2>Lorem ipsum dolor sit amet, consectetur</h2>
+            <h2><span>Lorem ipsum dolor sit amet, consectetur</span></h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae esse aspernatur velit.</p>
-            <article>
-                <figure>
-                    <img src="img/1.jpg" alt="ciel1">
-                    <figcaption>Projet 1</figcaption>
-                </figure>
-            </article>
-            <article>
-                <figure>
-                    <img src="img/2.jpg" alt="ciel2">
-                    <figcaption>Projet 2</figcaption>
-                </figure>
-            </article>
-            <article>
-                <figure>
-                    <img src="img/3.jpg" alt="ciel3">
-                    <figcaption>Projet 3</figcaption>
-                </figure>
-            </article>
-            <article>
-                <figure>
-                    <img src="img/4.jpg" alt="ciel4">
-                    <figcaption>Projet 4</figcaption>
-                </figure>
-            </article>
-            <article>
-                <figure>
-                    <img src="img/1.jpg" alt="ciel1">
-                    <figcaption>Projet 5</figcaption>
-                </figure>
-            </article>
-            <article>
-                <figure>
-                    <img src="img/2.jpg" alt="ciel2">
-                    <figcaption>Projet 6</figcaption>
-                </figure>
-            </article>
-            <article>
-                <figure>
-                    <img src="img/3.jpg" alt="ciel3">
-                    <figcaption>Projet 7</figcaption>
-                </figure>
-            </article>
-            <article>
-                <figure>
-                    <img src="img/4.jpg" alt="ciel4">
-                    <figcaption>Projet 8</figcaption>
-                </figure>
-            </article>
+            <figure>
+                <img src="img/1.jpg" alt="ciel1">
+                <figcaption>Projet 1</figcaption>
+            </figure>
+            <figure>
+                <img src="img/2.jpg" alt="ciel2">
+                <figcaption>Projet 2</figcaption>
+            </figure>
+            <figure>
+                <img src="img/3.jpg" alt="ciel3">
+                <figcaption>Projet 3</figcaption>
+            </figure>
+            <figure>
+                <img src="img/4.jpg" alt="ciel4">
+                <figcaption>Projet 4</figcaption>
+            </figure>
+            <figure>
+                <img src="img/1.jpg" alt="ciel1">
+                <figcaption>Projet 5</figcaption>
+            </figure>
+            <figure>
+                <img src="img/2.jpg" alt="ciel2">
+                <figcaption>Projet 6</figcaption>
+            </figure>
+            <figure>
+                <img src="img/3.jpg" alt="ciel3">
+                <figcaption>Projet 7</figcaption>
+            </figure>
+            <figure>
+                <img src="img/4.jpg" alt="ciel4">
+                <figcaption>Projet 8</figcaption>
+            </figure>
         </section>
         <section>
-            <h2>Ducimus omnis, praesentium cumque eaque</h2>
+            <h2><span>Ducimus omnis, praesentium cumque eaque</span></h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae esse aspernatur velit.</p>
             <form action="#">
                 <input type="text" value="Nom">
@@ -97,11 +81,11 @@
     <footer>
         <nav>
             <ul>
-                <li>Spaceman</li>
                 <li><a href="#">Accueil</a></li>
                 <li><a href="#">A propos</a></li>
                 <li><a href="#">Portfolio</a></li>
                 <li><a href="#">Contacts</a></li>
+                <li>Spaceman</li>
             </ul>
         </nav>        
     </footer>
