--- a/30032017/exo7/index.html
+++ b/30032017/exo7/index.html
@@ -4,11 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Exo 6 : Ajouter une balise dans une autre balise</title>
+    <link rel="stylesheet" href="css\style.css">
+    <title>Exo 7 : Les fondamntaux JQuery</title>
 </head>
 <body>
-    <h1>Exo 6 : Ajouter une balise dans une autre balise</h1>
-    <main></main>
+    <h1>Exo 7 : Les fondamentaux JQuery</h1>
+    <button>Move</button>
+
+    <h2>About</h2>
+
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi ratione distinctio reiciendis, magnam facere in cumque quam eius labore earum ab quos, dolores inventore fuga libero quis deleniti ad maiores.</p>
+
+    <h2>Contacts</h2>
+
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque, dolorum. Aspernatur iste suscipit odit quam pariatur sequi, veniam dignissimos! Ea esse minus ducimus quibusdam necessitatibus. Ab, dolorum repudiandae minima quasi.</p>
+    <!--
+        TOURJOURS intégrer JQuery AVANT le script de site
+    -->
+    <script
+  src="https://code.jquery.com/jquery-2.2.4.min.js"
+  integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+  crossorigin="anonymous"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
