Exercice Javascript fin

--- a/03042017/index.html
+++ b/03042017/index.html
@@ -55,7 +55,7 @@
                             <label for="avatarStyleBottom">En bas <b></b></label>
                             <select id="avatarStyleBottom">
                                 <option value="null" selected>--Sélectionner--</option>
-                                <option value="cuire">Cuire</option>
+                                <option value="cuir">Cuir</option>
                                 <option value="jean">Jean</option>
                                 <option value="militaire">Militaire</option>
                             </select>
